# temple

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  packages.cmake
include/: CMakeLists.txt  palettes.h  state.h  temple.h
include/entities/: CMakeLists.txt  entity.h
include/states/: CMakeLists.txt  levelstate.h  state.h
include/tiles/: CMakeLists.txt  tile.h
resources/: palettes.toml
resources/levels/1/: level.toml
src/: CMakeLists.txt  main.cpp  temple.cpp
src/states/: CMakeLists.txt  levelstate.cpp
src/tiles/: CMakeLists.txt  tile.cpp
